test(bugs): document and improve bug injection for 9 new repos
Campaign results documented in BUGS.md:
- jackson-databind: CAUGHT with BaseNodeDeserializer container-type-flip
  (previous 3 patches all MISSED — too broad/too narrow)
- httpcomponents-client: CAUGHT with BasicRouteDirector tunnel-proxy→target
  (first patch RouteTracker.isTunnelled affected 100% → MISSED)
- junit5, micronaut-core, mockito, commons-collections, spring-ai: all CAUGHT
- ai-sdk-java: CAUGHT with DestinationResolver path.endsWith flip
- jimfs: SKIPPED — JUnit 4 only (no JUnit 5 Jupiter dep)
- gson: SKIPPED — JUnit 4 only

Script fixes:
- phase_learn_maven: now applies detect_compiler_args and detect_extra_mvn_args
  (was missing these overrides, causing jimfs/guava builds to fail)
- jackson-databind added to detect_maven_java_home (requires JDK 21)
- guava: detect_extra_mvn_args now also excludes java9 profile